Masonry fixed width removed
layout issue with varying widths was resolved and now works so single
fixed width is not necessary.

--- a/_thesev_styles.css
+++ b/_thesev_styles.css
@@ -73,14 +73,14 @@ img {max-width:100%;}
 .masonList.fluidList li {float:none;}
 .thumbContainer {/*REMOVE THESE ONCE IMGS ARE PRESENT*/height:100%; width:100%;/*END REMOVE*/position:relative;}
 .catName {height:auto; width:88%; background-color:rgba(0,0,0,0.25); padding: 6%; font-family:montserrat; font-weight:normal; font-size:1.2em; text-align:center; position:absolute; bottom:0;}
-.anyMasonry.masonOne {height:228px; width:228px;}
+.anyMasonry.masonOne {height:316px; width:316px;}
 .anyMasonry.masonOne img {}
-.anyMasonry.masonTwo  {height:260px; width:228px;}
-.anyMasonry.masonTwo img {height:260px; width:228px;}
-.anyMasonry.masonThree {height:175px; width:228px;}
-.anyMasonry.masonThree img {height:175px; width:228px; margin:auto; display:block;}
-.anyMasonry.masonFour {height:145px; width:228px;}
-.anyMasonry.masonFour img {height:145px; width:228px;}
+.anyMasonry.masonTwo  {height:140px; width:140px;}
+.anyMasonry.masonTwo img {height:140px; width:140px;}
+.anyMasonry.masonThree {height:140px; width:316px;}
+.anyMasonry.masonThree img {height:140px; width:140px; margin:auto; display:block;}
+.anyMasonry.masonFour {height:316px; width:140px;}
+.anyMasonry.masonFour img {height:140px; width:140px; margin:60px 0 0 0;}
 .boxShadower {height:100%; width:100%; position:absolute; z-index:1;} /*box-shadow:inset 0 0 86px -34px; removed @request, may be used again*/
 /*WEBKIT SCROLLBARS*/
 ::-webkit-scrollbar {width:10px;}
@@ -153,7 +153,7 @@ END PERSISTENT CONTENT
 homepageTemplate
 *************************************************************************************/
 
-.mushPot {height:168px; width:168px; background:red; color:#ffffff; font-family:oswald; font-size:2.0em; font-weight:normal; padding:31px; text-align:center;} /*box-shadow:0 0 2px 0px;*/
+.mushPot {height:254px; width:254px; background:red; color:#ffffff; font-family:oswald; font-size:2.7em; font-weight:normal; padding:31px; text-align:center;} /*box-shadow:0 0 2px 0px;*/
 
 /*************************************************************************************
 categoryTemplate
